--- a/public/static/adminex/css/style.css
+++ b/public/static/adminex/css/style.css
@@ -292,7 +292,7 @@ hr {
     padding: 12px 20px;
     border-radius: 0;
     -webkit-border-radius: 0;
-    background: url(/style/home/images/base.png) repeat-x;
+    background: #000;
 }
 
 .custom-nav > li > a:hover,
@@ -310,7 +310,7 @@ hr {
 .custom-nav > li.active > a,
 .custom-nav > li.active > a:hover,
 .custom-nav > li.active > a:focus {
-    background: url(/style/home/images/base.png) repeat-x;
+    background: #000;
     color: #fff;
 }
 
@@ -510,8 +510,9 @@ h5.left-nav-title {
 -----------------------------*/
 
 .header-section {
-    background: #fff;
+    background: #000;
     border-bottom: 1px solid #eff0f4;
+    color: #fff;
 }
 
 .header-section::after {
